# personal-site

./: Main.hs  perso-site.cabal
Web/: Pandoc.hs  View.hs
articles/: 2014-07-30-Recursion-Schemes  2015-01-13-Haskell_EventStore_TCP_Client
articles/2012/6/29/: Applicative_Functor_(Partie_II)
articles/2012/9/13/: Monad_Transformer:_WriterT
config/: site.cfg.dist
html/: article-header.hamlet  article.hamlet  articles.hamlet  template.hamlet
post-boot/: Main.hs  post-boot.cabal
post-boot/Web/: Pandoc.hs
post-repository/: Main.hs  post-repository.cabal
post-repository/Web/: DB.hs
post-repository/config/: site.cfg.dist
post-repository/database/: ddl.sql
website/: Main.hs  perso-site.cabal
website/Web/: App.hs  Controller.hs  Model.hs  Pandoc.hs  Type.hs  View.hs
website/config/: site.cfg.dist
website/html/: article-header.hamlet
