name:                perso-site
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Yorick Laupa
maintainer:          yo.eight@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable perso-site
  main-is: Main.hs
  other-modules: Web.Pandoc

  default-extensions:  TemplateHaskell
  build-depends:       base ==4.7.*,
                       blaze-html,
                       containers,
                       data-default,
                       http-types,
                       highlighting-kate,
                       mtl,
                       scotty ==0.7.*,
                       text,
                       pandoc == 1.12.3.*,
                       shakespeare ==2.0.*,
                       bytestring,
                       directory ==1.2.*,
                       filepath,
                       configurator,
                       fast-logger,
                       wai-extra,
                       warp


  ghc-options: -O2 -threaded
  -- hs-source-dirs:
  default-language:    Haskell2010