name:                perso-site
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Yorick Laupa
maintainer:          yo.eight@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

executable perso-site
  main-is: Main.hs
  other-modules: Web.App
                 Web.Controller
                 Web.Model
                 Web.Pandoc
                 Web.View

  default-extensions:  TemplateHaskell
  build-depends:       base ==4.7.*,
                       blaze-html,
                       containers,
                       data-default,
                       http-types,
                       highlighting-kate,
                       mtl,
                       text,
                       pandoc == 1.13.*,
                       shakespeare,
                       bytestring,
                       directory,
                       filepath,
                       configurator,
                       fast-logger,
                       wai-extra,
                       warp,
                       time,
                       old-locale,
                       wai == 3.*,
                       stm

  ghc-options: -Wall -Werror -O2 -threaded
  -- hs-source-dirs:
  default-language:    Haskell2010