name:                perso-site
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Yorick Laupa
maintainer:          yo.eight@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

executable perso-site
  main-is: Main.hs
  other-modules: Web.App
                 Web.Controller
                 Web.Model
                 Web.View

  default-extensions:  TemplateHaskell
  build-depends:       base ==4.7.*,
                       blaze-html,
                       containers,
                       data-default,
                       http-types,
                       mtl,
                       text,
                       shakespeare,
                       bytestring,
                       configurator,
                       fast-logger,
                       wai-extra,
                       warp,
                       time,
                       old-locale,
                       wai == 3.*,
                       stm,
                       wreq == 0.2.*,
                       aeson,
                       vector,
                       lens

  ghc-options: -Wall -Werror -O2 -threaded
  -- hs-source-dirs:
  default-language:    Haskell2010